--- a/src/main/resources/io/github/nhtuan10/mykafkatool/main-view.fxml
+++ b/src/main/resources/io/github/nhtuan10/mykafkatool/main-view.fxml
@@ -106,6 +106,23 @@
                                                                               <Insets top="5.0" />
                                                                           </FlowPane.margin>
                                                                       </TextField>
+                                                                      <Label text="After">
+                                                                          <FlowPane.margin>
+                                                                              <Insets left="10.0" top="5.0" />
+                                                                          </FlowPane.margin>
+                                                                      </Label>
+                                                                      <DateTimePicker fx:id="startTimestampPicker" prefWidth="180.0">
+                                                                          <FlowPane.margin>
+                                                                              <Insets left="10.0" right="10.0" top="5.0" />
+                                                                          </FlowPane.margin>
+                                                                      </DateTimePicker>
+                                                      <Label fx:id="endTimestampLabel" text="Before" visible="false" />
+                                                      <DateTimePicker fx:id="endTimestampPicker" disable="true" prefWidth="180.0" visible="false" />
+                                                                      <Button fx:id="countMessagesBtn" mnemonicParsing="false" onAction="#countMessages" text="Count: 0">
+                                                                          <FlowPane.margin>
+                                                                              <Insets left="10.0" top="5.0" />
+                                                                          </FlowPane.margin>
+                                                                      </Button>
                                                                       <Label text="No Msgs/Partition To Poll">
                                                                           <FlowPane.margin>
                                                                               <Insets left="10.0" top="5.0" />
@@ -120,28 +137,6 @@
                                                                               <Insets left="10.0" />
                                                                           </FlowPane.margin>
                                                                       </TextField>
-                                                                      <Label text="After">
-                                                                          <FlowPane.margin>
-                                                                              <Insets left="10.0" top="5.0" />
-                                                                          </FlowPane.margin>
-                                                                      </Label>
-                                                                      <DateTimePicker fx:id="startTimestampPicker" prefWidth="180.0">
-                                                                          <FlowPane.margin>
-                                                                              <Insets left="10.0" right="10.0" top="5.0" />
-                                                                          </FlowPane.margin>
-                                                                      </DateTimePicker>
-                                                      <Label fx:id="endTimestampLabel" text="Before" visible="false" />
-                                                      <DateTimePicker fx:id="endTimestampPicker" disable="true" prefWidth="180.0" visible="false" />
-                                                                      <Button fx:id="countMessagesBtn" mnemonicParsing="false" onAction="#countMessages" text="Count Msgs">
-                                                                          <FlowPane.margin>
-                                                                              <Insets left="10.0" top="5.0" />
-                                                                          </FlowPane.margin>
-                                                                      </Button>
-                                                                      <Label fx:id="noMessagesLabel" text="0 Messages">
-                                                                          <FlowPane.margin>
-                                                                              <Insets left="10.0" top="5.0" />
-                                                                          </FlowPane.margin>
-                                                                      </Label>
                                                       <Label text="Filter">
                                                          <FlowPane.margin>
                                                             <Insets left="10.0" top="5.0" />
@@ -152,6 +147,7 @@
                                                             <Insets left="10.0" top="5.0" />
                                                          </FlowPane.margin>
                                                       </TextField>
+                                                                      <Label fx:id="noMessagesLabel" text="0 Messages" />
                                                                   </children>
                                                               </FlowPane>
                                                           </children>
